--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-APPLICATION_KEY=f57711721emsh7ff04b13e522dacp10a7a4jsn4863b56feff4
+APPLICATION_KEY=
 
-
-f57711721emsh7ff04b13e522dacp10a7a4jsn4863b56feff4
